Wrap the metadata in a lock just in case different gst plugins update metadata at the same time in different threads.

BUG:296606
FIXED-IN:4.6.1